--- a/Rent-Management-System/Views/Property/Index.cshtml
+++ b/Rent-Management-System/Views/Property/Index.cshtml
@@ -1,3 +1,12 @@
-﻿@{
+﻿@model IEnumerable<Data.Models.Property>
+
+@{
     ViewData["Title"] = "Rent Management";
 }
+
+<ul>
+    @foreach (var property in Model)
+    {
+        <li>@property.Address</li>
+    }
+</ul>
