Updated home view

--- a/Rent-Management-System/wwwroot/css/site.css
+++ b/Rent-Management-System/wwwroot/css/site.css
@@ -180,3 +180,50 @@ ul ul a {
 button:focus {
     outline: 0;
 }
+
+.menu{
+    padding: 15px 50px;
+}
+
+.menu-item {
+    border-radius: 6px;
+    height: 95%;
+    margin-bottom: 5%;
+    padding: 5px 10px;
+    font-size: 20px;
+    text-align: right;
+    color: white;
+    font-weight: bold;
+}
+
+.tenants-item {
+    background-color: #337bb7;
+}
+
+.property-item {
+    background-color: #f1a73c;
+}
+
+.payment-item {
+    background-color: #01AD7A;
+}
+
+.rent-collected-item {
+    background-color: #d8534e;
+}
+
+.item-title {
+    text-align: right;
+}
+
+.item-icon {
+    text-align: left;
+    margin-top: 15px;
+}
+
+@media (max-width: 768px) {
+    .menu {
+        padding: 0;
+    }
+}
+
