Added property and tenant count

--- a/Rent-Management-System/Views/Shared/_Layout.cshtml
+++ b/Rent-Management-System/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Rent Management System</title>
+    <title>@ViewData["Title"] - Rent Management</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Rent Management System</h3>
+                <h3><a asp-controller="Home" asp-action="Index">Rent Management</a></h3>
             </div>
             <ul class="list-unstyled components">
                 <li>
