Home view update

--- a/Rent-Management-System/Views/Home/Index.cshtml
+++ b/Rent-Management-System/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
                         </svg>
                     </div>
                     <div class="item-title col-sm-6">
-                        Tenants - @Model.TenantCount
+                        Tenants <br /> 
+                        <p class="item-count">@Model.TenantCount</p>
                     </div>
                 </div>
                 </a>
@@ -33,7 +34,8 @@
                             </svg>
                         </div>
                         <div class="item-title col-sm-6">
-                            Property - @Model.PropertyCount
+                            Property <br />
+                            <p class="item-count">@Model.PropertyCount</p>
                         </div>
                     </div>
                 </a>
