--- a/Rent-Management-System/wwwroot/css/site.css
+++ b/Rent-Management-System/wwwroot/css/site.css
@@ -70,6 +70,8 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+/* SIDEBAR.CSS */
+
 .wrapper {
     display: flex;
     width: 100%;
@@ -173,6 +175,11 @@ ul ul a {
     background: #6d7fcc;
 }
 
+/* END OF SIDEBAR */
+
+
+/* HOME.CSS */
+
 .container{
     margin: 0;
 }
@@ -228,3 +235,10 @@ button:focus {
     }
 }
 
+.item-count{
+    color: whitesmoke;
+    font-size: 30px;
+    font-weight: 100;
+}
+
+/* END OF HOME */
