--- a/Rent-Management-System/Views/Shared/_Layout.cshtml
+++ b/Rent-Management-System/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a asp-controller="Property" asp-action="Add">Add New Property</a>
                         </li>
                         <li>
-                            <a asp-controller="Property" asp-action="Index">View Property</a>
+                            <a asp-controller="Property" asp-action="All">View Property</a>
                         </li>
                     </ul>
                 </li>
@@ -39,7 +39,7 @@
                             <a asp-controller="Tenants" asp-action="Add">Add New Tenant</a>
                         </li>
                         <li>
-                            <a asp-controller="Tenants" asp-action="Index">View Tenants</a>
+                            <a asp-controller="Tenants" asp-action="All">View Tenants</a>
                         </li>
                     </ul>
                 </li>
