--- a/Rent-Management-System/Views/Tenants/Add.cshtml
+++ b/Rent-Management-System/Views/Tenants/Add.cshtml
@@ -9,7 +9,7 @@
     @Html.AntiForgeryToken()
     <div class="centered-form">
         <div class="mb-3 ml-3">
-            <h2>Add New Tenant</h2>
+            <h2>Add Tenant</h2>
         </div>
         <div class="form-row">
             <div class="form-group col-sm-6">
