--- a/Rent-Management-System/Views/Home/Index.cshtml
+++ b/Rent-Management-System/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xl-3 col-lg-6 col-sm-12">
             <div class="menu-item tenants-item">
-                <a asp-controller="Tenants" asp-action="Index">
+                <a asp-controller="Tenants" asp-action="All">
                     <div class="row">
                         <div class="item-icon col">
                             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
@@ -26,7 +26,7 @@
         </div>
         <div class="col-xl-3 col-lg-6 col-sm-12">
             <div class="menu-item property-item">
-                <a asp-controller="Property" asp-action="Index">
+                <a asp-controller="Property" asp-action="All">
                     <div class="row">
                         <div class="item-icon col">
                             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
