Added payment and monthly rent system

--- a/Rent-Management-System/Views/Shared/_Layout.cshtml
+++ b/Rent-Management-System/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a asp-controller="Payments" asp-action="Index">Payments</a>
+                    <a asp-controller="Payments" asp-action="All">Payments</a>
                 </li>
             </ul>
         </nav>
