--- a/Rent-Management-System/Views/Home/Index.cshtml
+++ b/Rent-Management-System/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
         </div>
         <div class="col-xl-3 col-lg-6 col-sm-12">
             <div class="menu-item payment-item">
-                <a asp-controller="Payments" asp-action="Index">
+                <a asp-controller="Payments" asp-action="All">
                     <div class="row">
                         <div class="item-icon col">
                             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-cash-stack" viewBox="0 0 16 16">
