--- a/Rent-Management-System/Views/Tenants/All.cshtml
+++ b/Rent-Management-System/Views/Tenants/All.cshtml
@@ -3,14 +3,32 @@
 @{
     ViewData["Title"] = "Tenants";
 }
-
+<div class="mb-3">
+    <h3>All Payments</h3>
+</div>
 <div class="mb-3">
     <a asp-controller="Tenants" asp-action="Add">Add Tenant</a>
 </div>
-
-<ul>
-    @foreach (var tenant in Model)
-    {
-        <li><a asp-controller="Tenants" asp-action="Index" asp-route-id="@tenant.Id">@tenant.FirstName @tenant.LastName</a></li>
-    }
-</ul>
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Address</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Date Of Moving In</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var tenant in Model)
+        {
+            <tr>
+                <td><a asp-controller="Tenants" asp-action="Index" asp-route-id="@tenant.Id">@tenant.FullName</a></td>
+                <td>@tenant.RentedProperty.Address</td>
+                <td>@tenant.Email</td>
+                <td>@tenant.PhoneNumber</td>
+                <td>@tenant.DateOfMovingIn.ToString("dd/MM/yyyy")</td>
+            </tr>
+        }
+    </tbody>
+</table>
