--- a/Rent-Management-System/Views/Tenants/All.cshtml
+++ b/Rent-Management-System/Views/Tenants/All.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Tenants";
 }
 <div class="mb-3">
-    <h3>All Payments</h3>
+    <h3>All Tenants</h3>
 </div>
 <div class="mb-3">
     <a asp-controller="Tenants" asp-action="Add">Add Tenant</a>
