--- a/Rent-Management-System/Views/Tenants/Add.cshtml
+++ b/Rent-Management-System/Views/Tenants/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Rent_Management_System.Models.AddTenantModel
+﻿@model Rent_Management_System.Models.TenantModels.AddTenantModel
 
 @{
     ViewData["Title"] = "Add Tenant";
