--- a/Rent-Management-System/Views/Tenants/Index.cshtml
+++ b/Rent-Management-System/Views/Tenants/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Rent_Management_System.Models.TenantIndexView
+﻿@model Rent_Management_System.Models.TenantModels.TenantIndexModel
 
 @{
     ViewData["Title"] = Model.Tenant.FirstName + " " + Model.Tenant.LastName;
