--- a/Rent-Management-System/Views/Property/Index.cshtml
+++ b/Rent-Management-System/Views/Property/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Data.Models.Property
+﻿@model Rent_Management_System.Models.PropertyModels.PropertyIndexModel
 
 @{ 
     ViewData["Title"] = Model.Address;
@@ -9,3 +9,25 @@
 </div>
 <h4>@Model.Area &#13217;</h4>
 <h5>@Model.Rooms room@(Model.Rooms > 1 ? "s" : ""), @Model.Beds bed@(Model.Beds > 1 ? "s" : "").</h5>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Date Of Moving In</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var tenant in Model.Tenants)
+        {
+            <tr>
+                <td><a asp-controller="Tenants" asp-action="Index" asp-route-id="@tenant.Id">@tenant.FullName</a></td>
+                <td>@tenant.Email</td>
+                <td>@tenant.PhoneNumber</td>
+                <td>@tenant.DateOfMovingIn</td>
+            </tr>
+        }
+    </tbody>
+</table>
