--- a/Rent-Management-System/Views/Tenants/All.cshtml
+++ b/Rent-Management-System/Views/Tenants/All.cshtml
@@ -7,7 +7,7 @@
     <h3>All Tenants</h3>
 </div>
 <div class="mb-3">
-    <a asp-controller="Tenants" asp-action="Add">Add Tenant</a>
+    <a  style="color: blue" asp-controller="Tenants" asp-action="Add">Add Tenant</a>
 </div>
 <table class="table">
     <thead>
@@ -17,13 +17,13 @@
             <th scope="col">Email</th>
             <th scope="col">Phone</th>
             <th scope="col">Date Of Moving In</th>
-        </tr>
+        </tr> 
     </thead>
     <tbody>
         @foreach (var tenant in Model.Tenants)
         {
             <tr>
-                <td><a asp-controller="Tenants" asp-action="Index" asp-route-id="@tenant.Id">@tenant.FullName</a></td>
+                <td><a  style="color: blue" asp-controller="Tenants" asp-action="Index" asp-route-id="@tenant.Id">@tenant.FullName</a></td>
                 <td>@tenant.Address</td>
                 <td>@tenant.Email</td>
                 <td>@tenant.PhoneNumber</td>
