Deleting Migrations and Design improvement

--- a/Rent-Management-System/Views/Home/Index.cshtml
+++ b/Rent-Management-System/Views/Home/Index.cshtml
@@ -52,7 +52,8 @@
                             </svg>
                         </div>
                         <div class="item-title col">
-                            Payments
+                            Month Payments <br/>
+                                     <p class="item-count">€@Model.RentCollectedThisMonth</p>
                         </div>
                     </div>
                 </div>
@@ -77,11 +78,11 @@
         </div>
     </div>
     <div class="mt-4">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-xl-5 col-lg-6">
                 <h3 class="rent-info">Rent collected as of @Model.CurrentMonth: €@Model.RentCollectedThisMonth</h3>
             </div>
-        </div>
+        </div> !-->
         <div class="mt-4 recent-payment-container">
             <h5 class="home-payments-title">Recent Payments</h5>
             <div>
