--- a/Rent-Management-System/Views/Payments/All.cshtml
+++ b/Rent-Management-System/Views/Payments/All.cshtml
@@ -11,7 +11,7 @@
         <tr>
             <th scope="col">From</th>
             <th scope="col">Amount in €</th>
-            <th scope="col">Date</th>
+            <th scope="col">Payment Date</th>
         </tr>
     </thead>
     <tbody>
