--- a/Rent-Management-System/Views/Payments/Tenant.cshtml
+++ b/Rent-Management-System/Views/Payments/Tenant.cshtml
@@ -5,13 +5,13 @@
 }
 
 <div class="mb-3">
-    <h3><a asp-controller="Tenants" asp-action="Index" asp-route-id="@Model.Payments.FirstOrDefault()?.TenantId">@Model.Payments.FirstOrDefault()?.TenantName</a></h3>
+    <h3 class="tenant-name"><a asp-controller="Tenants" asp-action="Index" asp-route-id="@Model.Payments.FirstOrDefault()?.TenantId">@Model.Payments.FirstOrDefault()?.TenantName</a></h3>
 </div>
 <table class="table">
     <thead>
         <tr>
             <th scope="col">Amount in €</th>
-            <th scope="col">Date</th>
+            <th scope="col">Payment Date</th>
         </tr>
     </thead>
     <tbody>
