--- a/Rent-Management-System/Views/Property/Edit.cshtml
+++ b/Rent-Management-System/Views/Property/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Data.Models.Property
 
 @{
-    ViewData["Title"] = "Add Property";
+    ViewData["Title"] = "Edit Property";
 }
 
 @using (Html.BeginForm())
@@ -9,8 +9,8 @@
     @Html.AntiForgeryToken()
     <div class="centered-form">
         <div class="mb-3 ml-3">
-            <h2>Add Property</h2>
-        </div>       
+            <h2>Edit Property</h2>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Address, new { @class = "control-label col-6" })
             <div class="col-12">
@@ -25,21 +25,21 @@
                     @Html.EditorFor(m => m.Rooms, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Rooms, "", new { @class = "text-danger" })
                 </div>
-            </div>       
+            </div>
             <div class="form-group col-sm-4">
                 @Html.LabelFor(model => model.Beds, new { @class = "control-label col-6" })
                 <div class="col-12">
                     @Html.EditorFor(m => m.Beds, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Beds, "", new { @class = "text-danger" })
                 </div>
-             </div>
-             <div class="form-group col-sm-4">
+            </div>
+            <div class="form-group col-sm-4">
                 @Html.LabelFor(model => model.Area, new { @class = "control-label col-12" })
                 <div class="col-12">
                     @Html.EditorFor(m => m.Area, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })
                 </div>
-             </div>
+            </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Rent, new { @class = "control-label col-6" })
@@ -47,10 +47,10 @@
                 @Html.EditorFor(m => m.Rent, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Rent, "", new { @class = "text-danger" })
             </div>
-         </div>
+        </div>
         <div class="form-group centered-button">
             <div class="col-offset-2 col-3">
-                <button type="submit" class="btn btn-success btn-block">Add</button>
+                <button type="submit" class="btn btn-primary btn-block">Update</button>
             </div>
         </div>
     </div>
