--- a/Rent-Management-System/Views/Tenants/Add.cshtml
+++ b/Rent-Management-System/Views/Tenants/Add.cshtml
@@ -56,7 +56,7 @@
         </div>
         <div class="form-group centered-button">
             <div class="col-offset-2 col-3">
-                <button type="submit" class="btn btn-primary btn-block">Add</button>
+                <button type="submit" class="btn btn-success btn-block">Add</button>
             </div>
         </div>
     </div>
